--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,48 +89,48 @@
 </div>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const searchInput = document.getElementById('search-input');
-    const searchForm = document.getElementById('search-form');
-    const searchQuery = document.getElementById('search-query');
-    let isSecondClick = false;
+document.addEventListener('DOMContentLoaded', function () {
+  const searchInput = document.getElementById('search-input');
+  const searchForm = document.getElementById('search-form');
+  const searchQuery = document.getElementById('search-query');
+  let isSecondClick = false;
 
-    // Ajouter un gestionnaire de clic à l'image de fond
-    searchInput.addEventListener('click', function () {
-      if (!isSecondClick) {
-        isSecondClick = true;
-        return;
-      }
+  searchInput.addEventListener('click', function () {
+    if (!isSecondClick) {
+      isSecondClick = true;
+      return;
+    }
 
+    const inputValue = searchInput.value;
+
+    if (inputValue.trim() !== "") {
+      searchQuery.value = inputValue;
+      setTimeout(function () {
+        searchForm.submit();
+        searchForm.reset();
+        isSecondClick = false;
+      }, 500); // Délai de 0,5 seconde (500 millisecondes)
+    }
+  });
+
+  searchInput.addEventListener('keydown', function (event) {
+    if (event.key === 'Enter') {
+      event.preventDefault();
       const inputValue = searchInput.value;
 
-      // Vérifier si le champ n'est pas vide
       if (inputValue.trim() !== "") {
-        searchQuery.value = inputValue; // Mettre la valeur de recherche dans le champ caché
-        searchForm.submit(); // Envoyer le formulaire lorsque le deuxième clic est détecté et que le champ n'est pas vide
-        searchForm.reset(); // Réinitialiser le formulaire
-        isSecondClick = false; // Réinitialiser le compteur de clics
+        searchQuery.value = inputValue;
+        setTimeout(function () {
+          searchForm.submit();
+          searchForm.reset();
+          isSecondClick = false;
+        }, 500); // Délai de 0,5 seconde (500 millisecondes)
       }
-    });
-
-    // Ajouter un gestionnaire d'événements "keydown" sur le champ de recherche
-    searchInput.addEventListener('keydown', function (event) {
-      if (event.key === 'Enter') {
-        event.preventDefault(); // Empêcher la soumission du formulaire par défaut
-        const inputValue = searchInput.value;
-
-        // Vérifier si le champ n'est pas vide
-        if (inputValue.trim() !== "") {
-          searchQuery.value = inputValue; // Mettre la valeur de recherche dans le champ caché
-          searchForm.submit(); // Envoyer le formulaire lorsque l'utilisateur appuie sur "Enter" et que le champ n'est pas vide
-          searchForm.reset(); // Réinitialiser le formulaire
-          isSecondClick = false; // Réinitialiser le compteur de clics
-        }
-      }
-    });
-
-    searchForm.addEventListener('submit', function (event) {
-      event.preventDefault(); // Empêcher la soumission du formulaire par défaut
-    });
+    }
   });
+
+  searchForm.addEventListener('submit', function (event) {
+    event.preventDefault();
+  });
+});
 </script>
