--- a/app/assets/stylesheets/components/_heart.scss
+++ b/app/assets/stylesheets/components/_heart.scss
@@ -10,8 +10,20 @@
 }
 
 .background{
-  background: white;
   border-radius: 50%;
-  height: 20px;
-  width: 20px;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background.checked{
+  background: white;
+
+}
+
+.background.unchecked{
+  background: transparent;
+
 }
