--- a/app/views/workspaces/_heart.html.erb
+++ b/app/views/workspaces/_heart.html.erb
@@ -1,14 +1,16 @@
 
 <div class="heart">
-  <% if @bookmark.persisted? %>
-    <%= link_to  [@bookmark], data: { turbo_method: :delete } do %>
-    <div class="background">
-      <i class="fa-solid fa-heart fa-lg" style="color: #f0ad00;"></i>
+  <% if @workspace.bookmarks.any? %>
+    <%= link_to bookmark_path(@workspace.bookmarks.first), data: { turbo_method: :delete } do %>
+    <div class="background checked">
+      <i class="fa-solid fa-heart fa-xl" style="color: #f0ad00;"></i>
     </div>
       <% end %>
     <% else %>
-      <%= link_to  [@workspace, @bookmark], data: { turbo_method: :post} do %>
-          <i class="fa-regular fa-heart fa-2xl" style="color: #f0ad00;"></i>
+      <%= link_to workspace_bookmarks_path(@workspace), data: { turbo_method: :post} do %>
+        <div class="background unchecked">
+            <i class="fa-regular fa-heart fa-xl" style="color: #f0ad00;"></i>
+        </div>
       <% end %>
     <% end %>
 </div>
