--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Mon profil</h1>
 <p>Find me in app/views/profiles/show.html.erb</p>
+
+
+<i class="fa-solid fa-pencil" style="color: #3F7CAF;"></i>
