home css + show css

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,17 +19,17 @@
 
 .search-container {
   display: flex;
-  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
 #search-input {
   width: 100%;
+  max-width: 500px;
   padding: 8px 18px;
-  margin-left: 15%;
   background-color: transparent;
   transition: transform 250ms ease-in-out;
-  font-size: 8px;
+  font-size: 16px;
   line-height: 20px;
   color: #575757;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
@@ -44,7 +44,6 @@
 
   &::placeholder {
       color: rgba(0, 0, 0, 1);
-      text-transform: uppercase;
       letter-spacing: 1.1px;
   }
 
@@ -93,24 +92,6 @@
   box-sizing: border-box;
 }
 
-.card h2 {
-  font-size: 2.25rem;
-  font-family: var(--font-title);
-  color: var(--white);
-  line-height: 1.1;
-}
-
-.card p {
-  font-family: var(--font-text);
-  font-size: 1rem;
-  line-height: 1.5;
-  color: var(--white);
-}
-
-.flow > * + * {
-  margin-top: var(--flow-space, 1em);
-}
-
 /* CARD COMPONENT */
 
 .card {
@@ -119,6 +100,7 @@
   border-radius: 10px;
   box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
   overflow: hidden;
+  color: white;
 }
 
 .card__background {
@@ -131,7 +113,7 @@
   background: linear-gradient(
     180deg,
     hsla(0, 0%, 0%, 0) 0%,
-    hsla(0, 0%, 0%, 0.815) 100%
+    hsla(0, 0%, 0%, 0.90) 100%
   );
   position: absolute;
   bottom: 0;
@@ -142,6 +124,8 @@
 
 h2.card__title {
   font-size: 16px;
+  font-weight: 600;
+  text-shadow: 1px 1px 1px hsla(0%, 0%, 0%, 0.75);
 }
 
 p.card__description {
