--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container text-center mt-4">
-    <div class="col-lg-8 col-md-8 col-12">
       <div class="mx-auto mt-4">
-        <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);">Chatrooms</h1>
-      </div>
-    </div>
+          <div class="chat_head">
+            <div class="chat_title">Mes discussions</div>
+            <div class="icon_bubble msg"> </div>
+          </div>
+      <div class="divider"> </div>
 <% @user1_chatrooms.each do |chatroom| %>
   <div class="chatroom mt-3">
     <%= link_to chatroom_path(chatroom) do %>
