--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,19 @@
-<p><%= message.user.first_name %>: <%= message.content %></p>
+      <div class="message-container <%= 'user1' if message.user == @chatroom.user1 %> <%= 'user2' if message.user == @chatroom.user2 %>" id="message-<%= message.id %>">
+        <% if message.user == @chatroom.user1 %>
+          <div class="message-box-user1">
+            <% if message.user.photos.attached? %>
+              <%= cl_image_tag(message.user.photos.last.key, height: 40, width: 40, crop: :fill, class: "avatar-chat") %>
+            <% end %>
+            <%= message.content %>
+            <p class="message-date1" style="display: none;"><%= message.created_at.strftime('%A %e %B, %H:%M') %></p>
+          </div>
+        <% else %>
+          <div class="message-box-user2">
+            <% if message.user.photos.attached? %>
+              <%= cl_image_tag(message.user.photos.last.key, height: 40, width: 40, crop: :fill, class: "avatar-chat") %>
+            <% end %>
+            <%= message.content %>
+            <p class="message-date2" style="display: none;"><%= message.created_at.strftime('%A %e %B, %H:%M') %></p>
+          </div>
+        <% end %>
+      </div>
