--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,14 +1,18 @@
 <div class="container-fluid">
-      <div class="mx-auto mt-4">
-        <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);"><%= @workspace.name %> <%= image_tag @workspace.user.photos.first, height: 50, width: 50, class: "avatar2", alt: "Photo" %></h1>
+      <div class="card-user-workspace">
+         <%= image_tag @workspace.user.photos.first, height: 70, width: 70, class: "avatar2", alt: "Photo" %>
+        <div class="name-workspace-show"><h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);"><%= @workspace.name %></h1>
+        <h1><%= @workspace.user.first_name %></h1></div>
       </div>
-        <div class="col-lg-4 col-md-4 col-12 pb-5 mb-5"> <!-- Réduisez la largeur des cartes ici -->
-          <div class="card-trip card-trip-list custom-link">
+       <!-- Réduisez la largeur des cartes ici -->
+
+        <div class="card-show">
             <div class="row heart-position">
               <% @workspace.photos %>
                 <%= render "heart" %>
-                <%= cl_image_tag @workspace.photos.first.key, width: 500, crop: :fill %>
-                  <div class="mx-auto p-4 mt-2 mb-3">
+              <%= cl_image_tag @workspace.photos.first.key,class:"image-show", width: 500, crop: :fill %>
+
+                  <div class="card-trip-show-infos">
                     <ul>
                       <li> Adresse : <%= @workspace.address %> </li>
                       <li> Nombre de places disponibles : <%= @workspace.capacity %> </li>
@@ -26,15 +30,15 @@
                       <% end %></div>
                       <li> Présence d'animaux : <%= @workspace.animals %> </li>
                     </ul>
-                  </div>
                     <%= simple_form_for([@workspace, @booking]) do |f| %>
-                      <div>Date souhaitée :</div>
+                      <div class= "input-booking">Date souhaitée :</div>
                       <%= f.input :start_date, label: false,
                         as: :string,
                         input_html: { data: { controller: "datepicker" } } %>
-                      <%= f.button :submit, "Envoyer ma demande", class: "btn yellow-btn" %>
+                      <%= f.button :submit, "Envoyer ma demande", class: "submit-show btn yellow-btn" %>
                     <% end %>
+                  </div>
             </div>
           </div>
+          </div>
         </div>
-    </div>
