--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="container chatroom">
+<div class="container chat-container">
   <div class="chat-container" data-controller="chatroom-subscription"
        data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
        data-chatroom-subscription-target="messages">
