--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -7,7 +7,7 @@
 
 .card-product-dashboard-3 {
   h2{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     margin: 0;
     color: #004792;
@@ -23,6 +23,13 @@
     margin: 0;
     padding: 0;
   }
+  p{
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
 }
 
 .profile-details {
@@ -50,25 +57,6 @@
   width: 65%;
 }
 
-.card-product-dashboard-3 h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.card-product-dashboard-3 h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.card-product-dashboard-3 p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
 
 .card-product-dashboard-3 .card-product-infos {
   padding: 20px;
