--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -28,3 +28,15 @@ font-family: "Montserrat";
   font-size: 16px;
   line-height: 1.4;
 }
+
+.linkedin-left{
+  width: 80%;
+}
+
+.linkedin-right{
+  width: 20%;
+}
+
+.linkedin{
+  display: flex;
+}
