--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,9 +5,10 @@ body {
 .navbar {
   justify-content: space-around;
   position: fixed;
-  margin-top: auto;
-  bottom: 1%; /* Ajustez cette valeur */
+  margin-top: 10px;
+  bottom: 10px; /* Ajustez cette valeur */
   width: 100%;
+  height: 70px;
   z-index: 999;
   background-color: #FFFFFF;
   border-radius: 30px;
