--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -9,45 +9,61 @@
       <%= render "heart" %>
     </div>
     <ul class="workspace-infos">
-      <div class="d-flex justify-content-around"><li><i class="fa-solid fa-location-dot fa-xl" style="color: #004792;"></i>   <%= @workspace.address %> </li></div>
-       <div class="font-awesome d-flex justify-content-around"><li><i class="fa-solid fa-user fa-2xl" style="color: #004792;"></i><%= @workspace.capacity %> </li>
-     <li><% if @workspace.internet_connexion %>
-      <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i>
-      <% else %>
-      <i class="fa-solid fa-wifi fa-2xl" style="color: #CDCBD2;"></i>
-      <% end %>
-      <li>
-      <% if @workspace.smoking %>
-      <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i>
-      <% else %>
-      <i class="fa-solid fa-smoking fa-2xl" style="color: #CBCDD2;"></i>
-      <% end %>
-      </li>
-      <li><% if @workspace.animals == "chien"%>
-      <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i>
-      <% elsif @workspace.animals == "chat" %>
-      <i class="fa-solid fa-cat fa-2xl" style="color: #004792;"></i>
-      <% elsif @workspace.animals == "autre" %>
-       <i class="fa-solid fa-paw fa-2xl" style="color: #004792;"></i>
-      <% else  %>
-      <i class="fa-solid fa-paw fa-2xl" style="color: #cdcbd2;"></i>
-      <% end %>
-      </li></div>
-      <li class="workspace-info-date"> <%= simple_form_for([@workspace, @booking]) do |f| %>
+      <div class="description-show">
+        <%= @workspace.description %>
+      </div>
+      <div class="d-flex justify-content-around">
+        <li><i class="fa-solid fa-location-dot fa-xl" style="color: #004792;"></i>   <%= @workspace.address %> </li></div>
+       <div class="font-awesome d-flex justify-content-around">
+        <li><% if @workspace.capacity == 1 %>
+          <i class="fa-solid fa-user fa-2xl" style="color: #004792;"></i>
+        <% elsif @workspace.capacity == 2 %>
+          <i class="fa-solid fa-user-group fa-2xl" style="color: #004792;"></i>
+        <% elsif @workspace.capacity == 3 %>
+          <i class="fa-solid fa-users fa-2xl" style="color: #004792;"></i>
+        <% end %>
+        </li>
+        <li>
+          <% if @workspace.internet_connexion %>
+            <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i>
+          <% else %>
+            <i class="fa-solid fa-wifi fa-2xl" style="color: #CDCBD2;"></i>
+          <% end %>
+        <li>
+        <li>
+          <% if @workspace.smoking %>
+            <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i>
+          <% else %>
+            <i class="fa-solid fa-smoking fa-2xl" style="color: #CBCDD2;"></i>
+          <% end %>
+        </li>
+        <li>
+          <% if @workspace.animals == "chien"%>
+            <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i>
+          <% elsif @workspace.animals == "chat" %>
+            <i class="fa-solid fa-cat fa-2xl" style="color: #004792;"></i>
+          <% elsif @workspace.animals == "autre" %>
+            <i class="fa-solid fa-paw fa-2xl" style="color: #004792;"></i>
+          <% else  %>
+            <i class="fa-solid fa-paw fa-2xl" style="color: #cdcbd2;"></i>
+          <% end %>
+        </li>
+      </div>
+        <li class="workspace-info-date"> <%= simple_form_for([@workspace, @booking]) do |f| %>
       <div>Date souhaitée :</div>
-      <div class="workspace-date-box">
-        <div class="input-left">
-            <%= f.input :start_date, label: false,
-              as: :string,
-              input_html: { data: { controller: "datepicker" } } %>
-        </div>
-          <div class="chat-right">
-            <i class="fa-regular fa-comment fa-2xl" style="color: #ffb116;"></i>
+        <div class="workspace-date-box">
+          <div class="input-left">
+              <%= f.input :start_date, label: false,
+                as: :string,
+                input_html: { data: { controller: "datepicker" } } %>
           </div>
-        </div>
-      <%= f.button :submit, "Envoyer ma demande", class: "bouton-show btn yellow-btn" %>
-    <% end %></li>
-    </ul>
-
-  </div>
+            <div class="chat-right">
+              <i class="fa-regular fa-comment fa-2xl" style="color: #ffb116;"></i>
+            </div>
+          </div>
+            <%= f.button :submit, "Envoyer ma demande", class: "bouton-show btn yellow-btn" %>
+            <% end %>
+        </li>
+      </ul>
+    </div>
 </div>
